--- a/Shopkeeper/AndroidManifest.xml
+++ b/Shopkeeper/AndroidManifest.xml
@@ -2,70 +2,72 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qiaoxi.shopkeeper"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
     <!-- 添加上网的权限 -->
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <!--添加文件读写权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 添加文件读写权限 -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar" >
+        android:theme="@android:style/Theme.Black.NoTitleBar">
         <service
             android:name=".SocketService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="cn.saltyx.shiyan.socketservice.SOCKET">
-                </action>
+                <action android:name="cn.saltyx.shiyan.socketservice.SOCKET"></action>
             </intent-filter>
         </service>
-        
         <service
             android:name=".InitDBService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="cn.saltyx.shiyan.initdbservice.INITDBSERVICE">
-                </action>
+                <action android:name="cn.saltyx.shiyan.initdbservice.INITDBSERVICE"></action>
             </intent-filter>
         </service>
-        
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
-        </activity>
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
-            android:theme="@style/Theme.Transparent"
             android:name=".DeviceListActivity"
-            android:screenOrientation = "portrait"
-            android:label="@string/app_name" >
-            
-        </activity>
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Transparent"></activity>
+
+        <service
+            android:name=".PrintService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="cn.saltyx.shiyan.printdemo.PRINT_SERVER"></action>
+            </intent-filter>
+        </service>
     </application>
-    
-   
 
 </manifest>
